[project]
name = "cartpole-reinforce-policy"
version = "0.1.0"
description = "REINFORCE policy gradient on CartPole-v1 — university learning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "gymnasium[classic-control]>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
train = "main:main"
